force-app/main/default/objects/bpats__Interview_Feedback__c/bpats__Interview_Feedback__c.object-meta.xml
<CustomObject>
    <label>Interview Feedback</label>
    <nameField>
        <displayFormat>IF-{00000}</displayFormat>
        <label>Interview Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>