force-app/main/default/objects/bpats__Interview_Feedback__c/fields/bpats__Candidate__c.field-meta.xml
<CustomField>
    <fullName>bpats__Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interview Feedbacks</relationshipLabel>
    <relationshipName>Interview_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>