force-app/main/default/objects/bpats__Interview_Feedback__c/fields/bpats__External_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>bpats__External_Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interview Feedbacks (Interviewer)</relationshipLabel>
    <relationshipName>Interview_Feedbacks1</relationshipName>
    <type>Lookup</type>
</CustomField>