force-app/main/default/objects/bpats__Interview_Feedback__c/fields/bpats__Interview__c.field-meta.xml
<CustomField>
    <fullName>bpats__Interview__c</fullName>
    <label>Interview</label>
    <referenceTo>bpats__Interview__c</referenceTo>
    <relationshipLabel>Interview Feedbacks</relationshipLabel>
    <relationshipName>Interview_Feedbacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>