force-app/main/default/objects/bpats__Interview_Feedback__c/fields/bpats__Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>bpats__Interview_Date__c</fullName>
    <label>Interview Date</label>
    <type>DateTime</type>
</CustomField>