force-app/main/default/objects/bpats__Interview_Feedback__c/fields/bpats__Interviewer__c.field-meta.xml
<CustomField>
    <fullName>bpats__Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interview_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>