force-app/main/default/objects/bpats__Interview_Feedback__c/fields/bpats__Recommended_New__c.field-meta.xml
<CustomField>
    <fullName>bpats__Recommended_New__c</fullName>
    <label>Recommended?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>