force-app/main/default/objects/bpats__Interview_Feedback__c/fields/bpats__Submission_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>bpats__Submission_Date_Time__c</fullName>
    <label>Submission Date/ Time</label>
    <type>DateTime</type>
</CustomField>