force-app/main/default/objects/bpats__Interview_Feedback__c/fields/bpats__Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>bpats__Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interview_Feedbacks1</relationshipName>
    <type>Lookup</type>
</CustomField>